[gd_scene load_steps=15 format=3 uid="uid://c15aj6fam003g"]

[ext_resource type="Script" path="res://Objects/Door2.gd" id="1_dok7q"]
[ext_resource type="Texture2D" uid="uid://bw16ethqcdlo4" path="res://assets/door.png" id="2_6dw5j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1blq"]
size = Vector2(30, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qik5p"]
size = Vector2(14, 30)

[sub_resource type="Animation" id="Animation_h8cdc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_50ctr"]
resource_name = "down_closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yxoxl"]
resource_name = "down_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_xhhop"]
resource_name = "left_closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_y6k61"]
resource_name = "left_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_kiryi"]
resource_name = "right_closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_i4kr4"]
resource_name = "right_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_324t0"]
resource_name = "up_closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u6fk7"]
resource_name = "up_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhpvt"]
_data = {
"RESET": SubResource("Animation_h8cdc"),
"down_closed": SubResource("Animation_50ctr"),
"down_open": SubResource("Animation_yxoxl"),
"left_closed": SubResource("Animation_xhhop"),
"left_open": SubResource("Animation_y6k61"),
"right_closed": SubResource("Animation_kiryi"),
"right_open": SubResource("Animation_i4kr4"),
"up_closed": SubResource("Animation_324t0"),
"up_open": SubResource("Animation_u6fk7")
}

[node name="Door2" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_dok7q")

[node name="CollisionShape2DHorizontal" type="CollisionShape2D" parent="."]
position = Vector2(16, 8)
shape = SubResource("RectangleShape2D_a1blq")
disabled = true

[node name="CollisionShape2DVertical" type="CollisionShape2D" parent="."]
position = Vector2(8, 16)
shape = SubResource("RectangleShape2D_qik5p")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("2_6dw5j")
centered = false
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vhpvt")
}
